@@ -26,8 +26,10 @@ SIGNATURE
 t/Map-Tube-Bucharest/01-use.t
 t/Map-Tube-Bucharest/02-version.t
 t/Map-Tube-Bucharest/03-map.t
-t/Map-Tube-Bucharest/04-get_shortest_route.t
-t/Map-Tube-Bucharest/05-name.t
-t/Map-Tube-Bucharest/06-xml.t
+t/Map-Tube-Bucharest/04-get_node_by_id.t
+t/Map-Tube-Bucharest/05-get_node_by_name.t
+t/Map-Tube-Bucharest/06-get_shortest_route.t
+t/Map-Tube-Bucharest/07-name.t
+t/Map-Tube-Bucharest/08-xml.t
 xt/Map-Tube-Bucharest/01-pod_coverage.t
 xt/Map-Tube-Bucharest/02-pod.t
