@@ -1,4 +1,5 @@
 0.06
+ - Add tests for get_node_by_id() and get_node_by_name() methods.
  - Fix Test::Map::Tube and planning of tests.
  - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
